# raygent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: kernel_integration_guide.md  public_api_surface.md
examples/: goal_runtime_service.py  minimal_query.py  project_profile.py  provider_runtime_bridge.py  reusable_factory.py  runtime_identity_snapshot.py  sdk_callbacks.py  sdk_stream_events.py  with_tools_and_context.py
recipes/: __init__.py
recipes/create_raygent/: README.md  __init__.py  _support.py  chat.py  full_developer.py  long_running_task.py  memory_agent.py  minimal.py  project_reader.py  repo_maintainer.py
src/raygent_harness/: __init__.py
src/raygent_harness/adapters/: __init__.py
src/raygent_harness/agents/: __init__.py  context_policy.py  loader.py  models.py  tool_pool.py
src/raygent_harness/context_providers/: __init__.py  defaults.py  environment.py  project_instructions.py  transcript_search.py
src/raygent_harness/coordinator/: __init__.py  mode.py  runtime.py  snapshot_store.py  team.py
src/raygent_harness/core/: child_query.py  config.py  context_providers.py  deps.py  file_state.py  media_budget.py  messages.py  model_adapter.py  model_provider.py  model_registry.py  model_request_normalization.py  model_stream.py  model_types.py  observability.py  permission_engine.py  permissions.py  query.py  query_engine.py  stall_watchdog.py  state.py  stop_hooks.py  streaming_tool_executor.py  task.py  token_budget.py  tool.py  tool_execution.py  (+2 more)
tests/: conftest.py  fakes.py
tests/unit/: test_examples.py  test_public_api_surface.py
(+257 files in other folders)
